fixed link paths

--- a/about.html
+++ b/about.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About me</title>
-    <link rel="icon" href="/img/favicon.ico" type="image/x-icon">
-	<link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="/styles/about.css">
+    <link rel="icon" href="./img/favicon.ico" type="image/x-icon">
+	<link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="./styles/about.css">
 </head>
 <body>
     <header>
@@ -16,11 +16,11 @@
         </div>
         <nav>
             <ul class="nav-links">
-                <li><a href="/interests.html">Interests</a></li>
-                <li><a href="/books.html">Books</a></li>
-                <li><a href="/movies.html">Movies</a></li>
-                <li><a href="/inspiration.html">Inspiration</a></li>
-                <li><a href="/about.html">About</a></li>
+                <li><a href="./interests.html">Interests</a></li>
+                <li><a href="./books.html">Books</a></li>
+                <li><a href="./movies.html">Movies</a></li>
+                <li><a href="./inspiration.html">Inspiration</a></li>
+                <li><a href="./about.html">About</a></li>
             </ul>
         </nav>
     </header>
@@ -33,59 +33,57 @@
             <p>My name</p>
             <div class="emodji">
                 <p>Karina</p>
-                <img src="/img/myname.webp" alt="">
+                <img src="./img/myname.webp" alt="">
             </div>
         </div>
         <div class="about_me"><p>My age</p>
             <div class="emodji">
-                <img src="/img/2.webp" alt="">
-                <img src="/img/0.webp" alt="">
+                <img src="./img/2.webp" alt="">
+                <img src="./img/0.webp" alt="">
             </div>
         </div>
         <div class="about_me">
             <p>My favourite color</p>
             <div class="emodji">
-                <img src="/img/color.webp" alt="">
-                <img src="/img/color2.webp" alt="">
-                <img src="/img/color3.webp" alt="">
+                <img src="./img/color.webp" alt="">
+                <img src="./img/color2.webp" alt="">
+                <img src="./img/color3.webp" alt="">
             </div>
         </div>
         <div class="about_me"><p>My height</p>
             <div class="emodji">
-                <img src="/img/1.webp" alt="">
-                <img src="/img/7.webp" alt="">
-                <img src="/img/2.webp" alt="">
+                <img src="./img/1.webp" alt="">
+                <img src="./img/7.webp" alt="">
+                <img src="./img/2.webp" alt="">
             </div>
         </div>
         <div class="about_me">
             <p>My sign</p>
             <div class="emodji">
-                <img src="/img/sign.webp" alt="">
+                <img src="./img/sign.webp" alt="">
             </div>
         </div>
-        <!--
         <div class="about_me"><p>Do I have a lover</p>
             <div class="emodji">
-                <img src="/img/lover.webp" alt="">
-                <img src="/img/yes.webp" alt="">
+                <img src="./img/lover.webp" alt="">
+                <img src="./img/yes.webp" alt="">
             </div>
         </div>
-        -->
         <div class="about_me">
             <p>What's my nationality</p>
             <div class="emodji">
-                <img src="/img/russia.webp" alt="">
-                <img src="/img/ukraine.webp" alt="">
+                <img src="./img/russia.webp" alt="">
+                <img src="./img/ukraine.webp" alt="">
             </div>
         </div>
         <div class="about_me"><p>Some things that inspire me</p>
             <div class="emodji">
-                <img src="/img/love.webp" alt="">
-                <img src="/img/earth.webp" alt="">
-                <img src="/img/water.webp" alt="">
+                <img src="./img/love.webp" alt="">
+                <img src="./img/earth.webp" alt="">
+                <img src="./img/water.webp" alt="">
             </div>
         </div>
     </div>
-    <script type="text/javascript" src="/navbar.js"></script>
+    <script type="text/javascript" src="./navbar.js"></script>
 </body>
 </html>
