--- a/books.html
+++ b/books.html
@@ -4,23 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Books</title>
-    <link rel="icon" href="/img/favicon.ico" type="image/x-icon">
-	<link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="/styles/books.css">
+    <link rel="icon" href="./img/favicon.ico" type="image/x-icon">
+	<link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="./styles/books.css">
 </head>
 <body>
     <header>
-        <a href="/index.html" class="logo">MyUniverse</a>
+        <a href="./index.html" class="logo">MyUniverse</a>
         <div class="burger">
             <span></span>
         </div>
         <nav>
             <ul class="nav-links">
-                <li><a href="/interests.html">Interests</a></li>
-                <li><a href="/books.html">Books</a></li>
-                <li><a href="/movies.html">Movies</a></li>
-                <li><a href="/inspiration.html">Inspiration</a></li>
-                <li><a href="/about.html">About</a></li>
+                <li><a href="./interests.html">Interests</a></li>
+                <li><a href="./books.html">Books</a></li>
+                <li><a href="./movies.html">Movies</a></li>
+                <li><a href="./inspiration.html">Inspiration</a></li>
+                <li><a href="./about.html">About</a></li>
             </ul>
         </nav>
     </header>
@@ -39,14 +39,14 @@
             me up.
         </p>
         <div class="images">
-            <div class="fade london"><img src="/img/london.webp" alt=""></div>
-            <div class="fade maugham"><img src="/img/maugham.webp" alt=""></div>
-            <div class="fade dostoevskiy"><img src="/img/dostoevskiy.webp" alt=""></div>
-            <div class="fade mcewan"><img src="/img/mcewan.webp" alt=""></div>
-            <div class="fade orwell"><img src="/img/orwell.webp" alt=""></div>
-            <div class="fade remark"><img src="/img/remark.webp" alt=""></div>
-            <div class="fade sacks"><img src="/img/sacks.webp" alt=""></div>
-            <div class="fade golding"><img src="/img/golding.webp" alt=""></div>
+            <div class="fade london"><img src="./img/london.webp" alt=""></div>
+            <div class="fade maugham"><img src="./img/maugham.webp" alt=""></div>
+            <div class="fade dostoevskiy"><img src="./img/dostoevskiy.webp" alt=""></div>
+            <div class="fade mcewan"><img src="./img/mcewan.webp" alt=""></div>
+            <div class="fade orwell"><img src="./img/orwell.webp" alt=""></div>
+            <div class="fade remark"><img src="./img/remark.webp" alt=""></div>
+            <div class="fade sacks"><img src="./img/sacks.webp" alt=""></div>
+            <div class="fade golding"><img src="./img/golding.webp" alt=""></div>
         </div>
         <blockquote>
             <p>"The world belongs to those who read."</p>
@@ -54,6 +54,6 @@
         </blockquote>
     </div>
     </main>
-    <script type="text/javascript" src="/navbar.js"></script>
+    <script type="text/javascript" src="./navbar.js"></script>
 </body>
 </html>
