--- a/inspiration.html
+++ b/inspiration.html
@@ -4,31 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inspiration</title>
-    <link rel="stylesheet" href="/styles/inspiration.css">
-	<link rel="apple-touch-icon" sizes="120x120" href="/img/apple-touch-icon.png">
-	<link rel="icon" type="image/png" sizes="32x32" href="/img/favicon-32x32.png">
-	<link rel="icon" type="image/png" sizes="16x16" href="/img/favicon-16x16.png">
-	<link rel="manifest" href="/img/site.webmanifest">
-	<link rel="mask-icon" href="/img/safari-pinned-tab.svg" color="#5bbad5">
-	<link rel="shortcut icon" href="/img/favicon.ico">
-	<meta name="msapplication-TileColor" content="#da532c">
-	<meta name="msapplication-config" content="/img/browserconfig.xml">
-	<meta name="theme-color" content="#ffffff">
-	<meta name="theme-color" content="#ffffff">
+    <link rel="icon" href="./img/favicon.ico" type="image/x-icon">
+	<link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="./styles/inspiration.css">
 </head>
 <body>
     <header>
-        <a href="/index.html" class="logo">MyUniverse</a>
+        <a href="./index.html" class="logo">MyUniverse</a>
         <div class="burger">
             <span></span>
         </div>
         <nav>
-            <ul class="nav-links">
-                <li><a href="/interests.html">Interests</a></li>
-                <li><a href="/books.html">Books</a></li>
-                <li><a href="/movies.html">Movies</a></li>
-                <li><a href="/inspiration.html">Inspiration</a></li>
-                <li><a href="/about.html">About</a></li>
+            <ul class="nav-links">.
+                <li><a href="./interests.html">Interests</a></li>
+                <li><a href="./books.html">Books</a></li>
+                <li><a href="./movies.html">Movies</a></li>
+                <li><a href="./inspiration.html">Inspiration</a></li>
+                <li><a href="./about.html">About</a></li>
             </ul>
         </nav>
     </header>
@@ -39,13 +31,13 @@
     <main>
         <div class="box">
             <div class="list">
-                <img src="/img/1.webp" alt="">
-                <p class="title">Love<img src="/img/love.webp" alt=""></p>
+                <img src="./img/1.webp" alt="">
+                <p class="title">Love<img src="./img/love.webp" alt=""></p>
                 <p>In any and all contexts, love is an amazing thing. 
                     The support and respect and magic that it provides never fails.</p>
             </div>
             <div class="list">
-                <img src="/img/2.webp" alt="">
+                <img src="./img/2.webp" alt="">
                 <p class="title">Community</p>
                 <p>When a group of people comes together because they 
                     like something, believe in something, support something 
@@ -53,20 +45,20 @@
                     to be part of something great as well.</p>
             </div>
             <div class="list">
-                <img src="/img/3.webp" alt="">
-                <p class="title">Music<img src="/img/music.webp" alt=""></p>
+                <img src="./img/3.webp" alt="">
+                <p class="title">Music<img src="./img/music.webp" alt=""></p>
                 <p>Great songs move people. The creativity and talent that it 
                     takes to make music amazes me in a wonderful way.</p>
             </div>
             <div class="list">
-                <img src="/img/4.webp" alt="">
-                <p class="title">Moving my body<img src="/img/move.webp" alt=""></p>
+                <img src="./img/4.webp" alt="">
+                <p class="title">Moving my body<img src="./img/move.webp" alt=""></p>
                 <p>Physical activities bring clarity and calm. 
                     They help to quiet my racing, jumbled thoughts. 
                     They clear away the cobwebs so I can meet my ideas.</p>
             </div>
             <div class="list">
-                <img src="/img/5.webp" alt="">
+                <img src="./img/5.webp" alt="">
                 <p class="title">Dreams</p>
                 <p>I’m talking about the kind of dreams that people work 
                     towards in their life. Travel and careers and homes 
@@ -74,7 +66,7 @@
                     is inspiring.</p>
             </div>
             <div class="list">
-                <img src="/img/6.webp" alt="">
+                <img src="./img/6.webp" alt="">
                 <p class="title">Beauty</p>
                 <p>I’m not talking about people as an example. 
                     I’m talking about the little things that are 
@@ -83,12 +75,12 @@
                     can’t be translated into photographs or paintings.</p>
             </div>
             <div class="list">
-                <img src="/img/7.webp" alt="">
+                <img src="./img/7.webp" alt="">
                 <p class="title">Graphic and web design</p>
                 <p> I could look at logos and beautiful websites all day.</p>
             </div>
             <div class="list">
-                <img src="/img/8.webp" alt="">
+                <img src="./img/8.webp" alt="">
                 <p class="title">Quotes from books</p>
                 <p>Words about truly important things in life - such as 
                     friendship, kindness, love - are so encouraging. They 
@@ -97,20 +89,20 @@
                 </p>
             </div>
             <div class="list">
-                <img src="/img/9.webp" alt="">
+                <img src="./img/9.webp" alt="">
                 <p class="title"><a href="http://pinterest.ru">Pinterest</a><img src="/img/pinterest.webp" alt=""></p>
                 <p> I love browsing the site to see the incredible 
                     things people come up with. You can click on 
                     "Pinterest" and explore it.</p>
             </div>
             <div class="list">
-                <img src="/img/10.webp" alt="">
-                <p class="title">Ocean<img src="/img/water.webp" alt=""></p>
+                <img src="./img/10.webp" alt="">
+                <p class="title">Ocean<img src="./img/water.webp" alt=""></p>
                 <p>The smell of the ocean and the sound of the waves 
                     crashing onto the shore.</p>
             </div>
         </div>
     </main>
-    <script type="text/javascript" src="/navbar.js"></script>
+    <script type="text/javascript" src="./navbar.js"></script>
 </body>
 </html>
