--- a/interests.html
+++ b/interests.html
@@ -4,33 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My interests</title>
-    <link rel="icon" href="/img/favicon.ico" type="image/x-icon">
-	<link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="/styles/interests.css">
+    <link rel="icon" href="./img/favicon.ico" type="image/x-icon">
+	<link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="./styles/interests.css">
 </head>
 <body>
-    <!-- I have plenty of hobbies. I love drawing and sketching,
-    making short videocuts. I enjoy taking pictures. 
-    I'm really interested in art and I love to gain new
-    information  on different artistic personalities and their 
-    creations. I also find  languages learning exiciting and
-    I think it can broaden your possibilities. I love creating
-    websites as well, especially making animation.
-    Another my passion is neuroscience and neurobiology. I learn 
-    about brain structure, how all it works and there's so many
-    to learn to!-->
     <header>
-        <a href="/index.html" class="logo">MyUniverse</a>
+        <a href="./index.html" class="logo">MyUniverse</a>
         <div class="burger">
             <span></span>
         </div>
         <nav>
             <ul class="nav-links">
-                <li><a href="/interests.html">Interests</a></li>
-                <li><a href="/books.html">Books</a></li>
-                <li><a href="/movies.html">Movies</a></li>
-                <li><a href="/inspiration.html">Inspiration</a></li>
-                <li><a href="/about.html">About</a></li>
+                <li><a href="./interests.html">Interests</a></li>
+                <li><a href="./books.html">Books</a></li>
+                <li><a href="./movies.html">Movies</a></li>
+                <li><a href="./inspiration.html">Inspiration</a></li>
+                <li><a href="./about.html">About</a></li>
             </ul>
         </nav>
     </header>
@@ -48,7 +38,7 @@
         </div>
         <div class="box">
             <div class="leftbox">
-                <img src="/img/draw.webp" alt="">
+                <img src="./img/draw.webp" alt="">
             </div>
             <div class="rightbox">
                 <p class="title">Drawing</p>
@@ -60,7 +50,7 @@
         </div>
         <div class="box">
             <div class="leftbox">
-                <img src="/img/videos.svg" alt="">
+                <img src="./img/videos.svg" alt="">
             </div>
             <div class="rightbox">
                 <p class="title">Videocuts & Pictures</p>
@@ -75,7 +65,7 @@
         </div>
         <div class="box">
             <div class="leftbox">
-                <img src="/img/girl.svg" alt="">
+                <img src="./img/girl.svg" alt="">
             </div>
             <div class="rightbox">
                 <p class="title">Music</p>
@@ -97,7 +87,7 @@
         </div>
         <div class="box">
             <div class="leftbox">
-                <img src="/img/pic.svg" alt="">
+                <img src="./img/pic.svg" alt="">
             </div>
             <div class="rightbox">
                 <p class="title">Cooking</p>
@@ -109,7 +99,7 @@
         </div>
         <div class="box">
             <div class="leftbox">
-                <img src="/img/workout.webp" alt="">
+                <img src="./img/workout.webp" alt="">
             </div>
             <div class="rightbox">
                 <p class="title">Working out</p>
@@ -121,7 +111,7 @@
         </div>
         <div class="box">
             <div class="leftbox">
-                <img src="/img/neuro.webp" alt="">
+                <img src="./img/neuro.webp" alt="">
             </div>
             <div class="rightbox">
                 <p class="title">Neuroscience</p>
@@ -135,7 +125,7 @@
             <p>Love what you do, do what you love.</p>
         </div>
     </main>
-    <script type="text/javascript" src="/navbar.js"></script>
-    <script type="text/javascript" src="typing.js"></script>
+    <script type="text/javascript" src="./navbar.js"></script>
+    <script type="text/javascript" src="./typing.js"></script>
 </body>
 </html>
