--- a/movies.html
+++ b/movies.html
@@ -1,26 +1,26 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en"> 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Movies</title>
-    <link rel="icon" href="/img/favicon.ico" type="image/x-icon">
-	<link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="/styles/movies.css">
+    <link rel="icon" href="./img/favicon.ico" type="image/x-icon">
+	<link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="./styles/movies.css">
 </head>
 <body>
     <header>
-        <a href="/index.html" class="logo">MyUniverse</a>
+        <a href="./index.html" class="logo">MyUniverse</a>
         <div class="burger">
             <span></span>
         </div>
         <nav>
             <ul class="nav-links">
-                <li><a href="/interests.html">Interests</a></li>
-                <li><a href="/books.html">Books</a></li>
-                <li><a href="/movies.html">Movies</a></li>
-                <li><a href="/inspiration.html">Inspiration</a></li>
-                <li><a href="/about.html">About</a></li>
+                <li><a href="./interests.html">Interests</a></li>
+                <li><a href="./books.html">Books</a></li>
+                <li><a href="./movies.html">Movies</a></li>
+                <li><a href="./inspiration.html">Inspiration</a></li>
+                <li><a href="./about.html">About</a></li>
             </ul>
         </nav>
     </header>
@@ -38,23 +38,23 @@
             <cite>Albus Dumbledore</cite>
         </blockquote>
         <div class="images">
-            <div class="fade inception"><img src="/img/inception.webp" alt=""></div>
-            <div class="fade hp"><img src="/img/harrypotter.webp" alt=""></div>
-            <div class="fade dead"><img src="/img/dead.webp" alt=""></div>
-            <div class="fade happiness"><img src="/img/happiness.webp" alt=""></div>
-            <div class="fade devil"><img src="/img/devil.webp" alt=""></div>
-            <div class="fade memento"><img src="/img/memento.webp" alt=""></div>
-            <div class="fade eternal"><img src="/img/eternal.webp" alt=""></div>
-            <div class="fade mrnobody"><img src="/img/mrnobody.webp" alt=""></div>
+            <div class="fade inception"><img src="./img/inception.webp" alt=""></div>
+            <div class="fade hp"><img src="./img/harrypotter.webp" alt=""></div>
+            <div class="fade dead"><img src="./img/dead.webp" alt=""></div>
+            <div class="fade happiness"><img src="./img/happiness.webp" alt=""></div>
+            <div class="fade devil"><img src="./img/devil.webp" alt=""></div>
+            <div class="fade memento"><img src="./img/memento.webp" alt=""></div>
+            <div class="fade eternal"><img src="./img/eternal.webp" alt=""></div>
+            <div class="fade mrnobody"><img src="./img/mrnobody.webp" alt=""></div>
         </div>
     </div>
     <div class="box">
         <p class="title">Favourite series</p>
         <div class="images">
-            <div class="fade euphoria"><img src="/img/euphoria.webp" alt=""></div>
-            <div class="fade sherlock"><img src="/img/sherlok.webp" alt=""></div>
-            <div class="fade glee"><img src="/img/glee.webp" alt=""></div>
-            <div class="fade strangerthings"><img src="/img/strangerthings.webp" alt=""></div>
+            <div class="fade euphoria"><img src="./img/euphoria.webp" alt=""></div>
+            <div class="fade sherlock"><img src="./img/sherlok.webp" alt=""></div>
+            <div class="fade glee"><img src="./img/glee.webp" alt=""></div>
+            <div class="fade strangerthings"><img src="./img/strangerthings.webp" alt=""></div>
         </div>
         <blockquote>
             <p>"You have to make the right choice. As long as you don't 
@@ -63,7 +63,7 @@
             <cite>Mr Nobody</cite>
         </blockquote>
     </div>
-    <script type="text/javascript" src="/navbar.js"></script>
+    <script type="text/javascript" src="./navbar.js"></script>
 </main>
 </body>
 </html>
