--- a/index.html
+++ b/index.html
@@ -1,32 +1,24 @@
 <!doctype html>
 <html>
 <head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>My Universe</title>
-	<link rel="stylesheet" href="/styles/style.css">
-	<link rel="apple-touch-icon" sizes="120x120" href="/img/apple-touch-icon.png">
-	<link rel="icon" type="image/png" sizes="32x32" href="/img/favicon-32x32.png">
-	<link rel="icon" type="image/png" sizes="16x16" href="/img/favicon-16x16.png">
-	<link rel="manifest" href="/img/site.webmanifest">
-	<link rel="mask-icon" href="/img/safari-pinned-tab.svg" color="#5bbad5">
-	<link rel="shortcut icon" href="/img/favicon.ico">
-	<meta name="msapplication-TileColor" content="#da532c">
-	<meta name="msapplication-config" content="/img/browserconfig.xml">
-	<meta name="theme-color" content="#ffffff">
-	<meta name="theme-color" content="#ffffff">
+	<meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Universe</title>
+    <link rel="icon" href="./img/favicon.ico" type="image/x-icon">
+	<link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="./styles/style.css">
 	<script src="parallax.js"></script>
 </head>
 <body>
 	<header>
-		<a href="/index.html" class="logo">MyUniverse</a>
+		<a href="./index.html" class="logo">MyUniverse</a>
         <nav>
             <ul class="nav-links">
-                <li><a href="/interests.html">Interests</a></li>
-                <li><a href="/books.html">Books</a></li>
-                <li><a href="/movies.html">Movies</a></li>
-                <li><a href="/inspiration.html">Inspiration</a></li>
-                <li><a href="/about.html">About</a></li>
+                <li><a href="./interests.html">Interests</a></li>
+                <li><a href="./books.html">Books</a></li>
+                <li><a href="./movies.html">Movies</a></li>
+                <li><a href="./inspiration.html">Inspiration</a></li>
+                <li><a href="./about.html">About</a></li>
             </ul>
 		</nav>
 		<div class="burger">
@@ -36,18 +28,18 @@
 	<div class="container">
 		<ul id="scene">
 			<li class="layer" id="myuni" data-depth=".1"><h1>My Universe</h1><p class="description">Welcome to my world! <span>Explore it by clicking on planets. Hope you enjoy it!</span></p></li>
-			<li class="layer" id="planet1" data-depth="0.8"><a href="/interests.html"><img src="/img/planet1.svg"></a></li>
-			<li class="layer" id="planet2" data-depth="-1"><a href="/books.html"><img src="/img/planet2.svg"></a></li>
-			<li class="layer" id="planet3" data-depth="-0.4"><a href="/inspiration.html"><img src="/img/planet3.svg"></a></li>
-			<li class="layer" id="planet4" data-depth="1.5"><a href="/movies.html"><img src="/img/planet4.svg"></a></li>
-			<li class="layer" id="planet5" data-depth="0.7"><a href="/about.html"><img src="/img/planet5.svg"></a></li>
-			<li class="layer" id="rocket" data-depth="-0.5"><img src="/img/rocket.svg"></li>
+			<li class="layer" id="planet1" data-depth="0.8"><a href="./interests.html"><img src="./img/planet1.svg"></a></li>
+			<li class="layer" id="planet2" data-depth="-1"><a href="./books.html"><img src="./img/planet2.svg"></a></li>
+			<li class="layer" id="planet3" data-depth="-0.4"><a href="./inspiration.html"><img src="./img/planet3.svg"></a></li>
+			<li class="layer" id="planet4" data-depth="1.5"><a href="./movies.html"><img src="./img/planet4.svg"></a></li>
+			<li class="layer" id="planet5" data-depth="0.7"><a href="./about.html"><img src="./img/planet5.svg"></a></li>
+			<li class="layer" id="rocket" data-depth="-0.5"><img src="./img/rocket.svg"></li>
 		</ul>
 	</div>
 	<script>
 		var scene = document.getElementById('scene');
 		var parallax = new Parallax(scene);
 	</script>
-	<script type="text/javascript" src="/navbar.js"></script>
+	<script type="text/javascript" src="./navbar.js"></script>
 </body>
 </html>
