fixed numb mistake

--- a/movies.html
+++ b/movies.html
@@ -58,7 +58,7 @@
         </div>
         <blockquote>
             <p>"You have to make the right choice. As long as you don't 
-                choose, everythings remains possible."
+                choose, everything remains possible."
             </p>
             <cite>Mr Nobody</cite>
         </blockquote>
