--- a/interests.html
+++ b/interests.html
@@ -60,6 +60,31 @@
                 </p>
             </div>
         </div>
+            <div class="examples">
+                <p class="title">See some of my little sketches</p>
+            </div>
+            <div class="slide">
+                <input type="radio" name="slider2" id="slider2_1" checked="checked">
+                <label for="slider2_1"></label>
+                <div><p>Sketch of people</p> <img src="./img/draw1.jpg"></div>
+                <label for="slider2_2"></label>
+                <input type="radio" name="slider2" id="slider2_2">
+                <label for="slider2_2"></label>
+                <div><p>Sketch of figures</p> <img src="./img/draw2.jpg"></div>
+                <label for="slider2_3"></label>
+                <input type="radio" name="slider2" id="slider2_3">
+                <label for="slider2_3"></label>
+                <div><p>Boat sketch</p> <img src="./img/draw3.jpg"></div>
+                <label for="slider2_4"></label>
+                <input type="radio" name="slider2" id="slider2_4">
+                <label for="slider2_4"></label>
+                <div><p>Watercolor sketch</p> <img src="./img/draw4.jpg"></div>
+                <label for="slider2_6"></label>
+                <input type="radio" name="slider2" id="slider2_5">
+                <label for="slider2_5"></label>
+                <div><p>Sketch of my dog</p> <img src="./img/draw5.jpg"></div>
+                <label for="slider2_6"></label>
+            </div>
         <div class="box">
             <div class="leftbox">
                 <img src="./img/videos.svg" alt="">
@@ -87,9 +112,12 @@
                     day I seem to be in the mood for something 
                     different, and I constantly go through phases 
                     of loving one genre for a week and then switching
-                    the next week.
+                    the next week. Now I'm listening to "Bloom" album by Troye Sivan.
                 </p>
             </div>
+        </div>
+        <div class="box music">
+            <iframe frameborder="0" style="border:none;width:100%;height:450px;" width="100%" height="450px" src="https://music.yandex.ru/iframe/#album/5705035"></iframe>
         </div>
         <div class="description">
             <p>Find three hobbies you love:</p>
@@ -119,7 +147,11 @@
                     working out satisfying sometimes. I work 
                     out to be healthy and strong. 
                 </p>
+                <p>I like to find tutorial videos on Youtube and work out watching it. Here is an example video below.</p>
             </div>
+        </div>
+        <div class="box video">
+            <iframe src="https://www.youtube.com/embed/-p0PA9Zt8zk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
         <div class="box">
             <div class="leftbox">
@@ -131,6 +163,7 @@
                     about brain structure, how all it works and there's so many
                     to learn to! 
                 </p>
+                <p>Currently I'm taking <a href="https://www.coursera.org/learn/neurobiology">this course</a> about neurobiology of brain. It's a free online course on Coursera.</p>
             </div>
         </div>
         <div class="description">
