--- a/about.html
+++ b/about.html
@@ -41,54 +41,54 @@
     </div>
     <div class="box">
         <div class="about_me">
-            <p>My name</p>
-            <div class="emodji">
+            <p class="slide-in from-left">My name</p>
+            <div class="emodji slide-in from-right">
                 <p>Karina</p>
                 <img src="./img/myname.webp" alt="">
             </div>
         </div>
-        <div class="about_me"><p>My age</p>
-            <div class="emodji">
+        <div class="about_me"><p class="slide-in from-left">My age</p>
+            <div class="emodji slide-in from-right">
                 <img src="./img/2.webp" alt="">
                 <img src="./img/0.webp" alt="">
             </div>
         </div>
         <div class="about_me">
-            <p>My favourite color</p>
-            <div class="emodji">
+            <p class="slide-in from-left">My favourite color</p>
+            <div class="emodji slide-in from-right">
                 <img src="./img/color.webp" alt="">
                 <img src="./img/color2.webp" alt="">
                 <img src="./img/color3.webp" alt="">
             </div>
         </div>
-        <div class="about_me"><p>My height</p>
-            <div class="emodji">
+        <div class="about_me"><p class="slide-in from-left">My height</p>
+            <div class="emodji slide-in from-right">
                 <img src="./img/1.webp" alt="">
                 <img src="./img/7.webp" alt="">
                 <img src="./img/2.webp" alt="">
             </div>
         </div>
         <div class="about_me">
-            <p>My sign</p>
-            <div class="emodji">
+            <p class="slide-in from-left">My sign</p>
+            <div class="emodji slide-in from-right">
                 <img src="./img/sign.webp" alt="">
             </div>
         </div>
-        <div class="about_me"><p>Do I have a lover</p>
-            <div class="emodji">
+        <div class="about_me"><p class="slide-in from-left">Do I have a lover</p>
+            <div class="emodji slide-in from-right">
                 <img src="./img/lover.webp" alt="">
                 <img src="./img/yes.webp" alt="">
             </div>
         </div>
         <div class="about_me">
-            <p>What's my nationality</p>
-            <div class="emodji">
+            <p class="slide-in from-left">What's my nationality</p>
+            <div class="emodji slide-in from-right">
                 <img src="./img/russia.webp" alt="">
                 <img src="./img/ukraine.webp" alt="">
             </div>
         </div>
-        <div class="about_me"><p>Some things that inspire me</p>
-            <div class="emodji">
+        <div class="about_me"><p class="slide-in from-left">Some things that inspire me</p>
+            <div class="emodji slide-in from-right">
                 <img src="./img/love.webp" alt="">
                 <img src="./img/earth.webp" alt="">
                 <img src="./img/water.webp" alt="">
@@ -98,7 +98,8 @@
     <script>
 		var scene = document.getElementById('scene');
 		var parallax = new Parallax(scene);
-	</script>
+    </script>
+    <script src="./appear.js"></script>
     <script type="text/javascript" src="./navbar.js"></script>
 </body>
 </html>
