--- a/index.html
+++ b/index.html
@@ -2,7 +2,12 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta property="og:title" content="My Universe">
+	<meta property="og:site_name" content="MyUniverse">
+	<meta property="og:url" content="index.html">
+	<meta property="og:description" content="">
+	<meta property="og:image" content="./img/rocket.svg">
     <title>My Universe</title>
     <link rel="icon" href="./img/favicon.ico" type="image/x-icon">
 	<link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
