--- a/interests.html
+++ b/interests.html
@@ -60,6 +60,7 @@
                 </p>
             </div>
         </div>
+        <!--
             <div class="examples">
                 <p class="title">See some of my little sketches</p>
             </div>
@@ -84,7 +85,7 @@
                 <label for="slider2_5"></label>
                 <div><p>Sketch of my dog</p> <img src="./img/draw5.jpg"></div>
                 <label for="slider2_6"></label>
-            </div>
+            </div> -->
         <div class="box">
             <div class="leftbox">
                 <img src="./img/videos.svg" alt="">
