--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta property="og:title" content="My Universe">
 	<meta property="og:site_name" content="MyUniverse">
-	<meta property="og:url" content="index.html">
+	<meta property="og:url" content="https://my-universe.now.sh/">
 	<meta property="og:description" content="">
-	<meta property="og:image" content="./img/apple-touch-icon.png">
+	<meta property="og:image" content="./img/draw1.jpg">
     <title>My Universe</title>
     <link rel="icon" href="./img/favicon.ico" type="image/x-icon">
 	<link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
