--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta property="og:site_name" content="MyUniverse">
 	<meta property="og:url" content="https://my-universe.now.sh/">
 	<meta property="og:description" content="">
-	<meta property="og:image" content="./img/draw1.jpg">
+	<meta property="og:image" content="./img/apple-touch-icon.png">
     <title>My Universe</title>
     <link rel="icon" href="./img/favicon.ico" type="image/x-icon">
 	<link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
