added back-to-top button

--- a/about.html
+++ b/about.html
@@ -25,6 +25,7 @@
             </ul>
         </nav>
     </header>
+    <a class="back_to_top" title="Наверх">↑</a>
     <div class="viewbox">
         <div class="wrapper">
             <h1>About me</h1>
