--- a/interests.html
+++ b/interests.html
@@ -44,6 +44,7 @@
         </div>
     </div>
     <main>
+        <a class="back_to_top" title="Наверх">↑</a>
         <div class="description">
             <p>I have plenty of hobbies. I love drawing and sketching,
                 making short videocuts. I enjoy taking pictures. </p>
@@ -60,7 +61,6 @@
                 </p>
             </div>
         </div>
-        <!--
             <div class="examples">
                 <p class="title">See some of my little sketches</p>
             </div>
@@ -85,7 +85,7 @@
                 <label for="slider2_5"></label>
                 <div><p>Sketch of my dog</p> <img src="./img/draw5.jpg"></div>
                 <label for="slider2_6"></label>
-            </div> -->
+            </div>
         <div class="box">
             <div class="leftbox">
                 <img src="./img/videos.svg" alt="">
@@ -99,6 +99,7 @@
                     really pursued anything with photography, but 
                     it is something I enjoy doing on my own.
                 </p>
+                <audio src="./img/record.aac" controls></audio>
             </div>
         </div>
         <div class="box">
