--- a/books.html
+++ b/books.html
@@ -40,6 +40,7 @@
         </div>
     </div>
     <main>
+        <a class="back_to_top" title="Наверх">↑</a>
     <div class="box">
         <p class="title">Favourite books</p>
         <p>Most of these books are novels. I absolutely
