--- a/inspiration.html
+++ b/inspiration.html
@@ -40,6 +40,7 @@
         </div>
     </div>
     <main>
+        <a class="back_to_top" title="Наверх">↑</a>
         <div class="box">
             <div class="list">
                 <img class="fade-in" src="./img/1.webp" alt="">
