--- a/movies.html
+++ b/movies.html
@@ -40,6 +40,7 @@
         </div>
     </div>
     <main>
+        <a class="back_to_top" title="Наверх">↑</a>
     <div class="box">
         <p class="title">Favourite movies</p>
         <blockquote>
